# LuoGenotyper

./: README.md  setup.cfg
luo_genotyper/: __main__.py  common.py  luo_ighv_genotyper.py  msa_wrappers.py  two_copy_gene_analysis.sh
luo_genotyper/data/: IGHD_igblast.fasta.ndb  IGHD_igblast.fasta.nin  IGHJ_igblast.fasta.ndb  IGHJ_igblast.fasta.nin  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates-functional.fa  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates-trimmed.fa  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates-trimmed.fa.ndb  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates-trimmed.fa.nhr  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates-trimmed.fa.nin  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates-trimmed.fa.nos  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates-trimmed.fa.not  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates-trimmed.fa.nsq  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates.fa.2.bt2  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates.fa.3.bt2  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates.fa.4.bt2  IMGT_IGHV_reference_allele_db-updated+oscar_novel-no_duplicates.fa.rev.2.bt2
