[metadata]
name = luo_genotyper
version = attr: luo_genotyper.__version__
author = Ananth Hari
author_email = ahari1@umd.edu
description = Implementation of IGHV genotyping pipeline as described in Luo et al. (2019)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnanthHari/LuoGenotyper
project_urls =
    Bug Tracker = https://github.com/AnanthHari/LuoGenotyper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.8
install_requires =
    logbook
    dill
    biopython
    pysam

[options.packages.find]
where = 

[options.package_data]
* = *.fasta*, *.txt, *.tsv, *.fa*, .*aux

[options.entry_points]
console_scripts =
    luo_genotyper = luo_genotyper.__main__:main
